data/Java/16-illegal-constructor-name/2/[M]Error.txt
https://stackoverflow.com/questions/7451707/java-error-invalid-method-declaration-return-type-required
Circle.java:4: error: invalid method declaration; return type required
    public CircleR(double r)
           ^